--- a/styles/main.css
+++ b/styles/main.css
@@ -56,10 +56,13 @@ body {
 
 .content {
     display: grid;
-    grid-template-columns: repeat(3, minmax(min-content, 300px));
-    grid-template-rows: repeat(2, minmax(min-content, 400px));
-    padding: 0% 5%;
-    gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-rows: repeat(2, minmax(min-content, 500px));
+    grid-auto-rows: 500px;
+    margin: 0 auto;
+    padding: 0 10% 0 5%;
+    gap: 5% 5%;
+    max-width: 1200px;
     
 }
 
@@ -88,9 +91,12 @@ body {
 
 .content__member-photo {
     width: 240px;
-    height: 340px;
+    height: 350px;
 }
 
+.footer {
+    padding: 24px;
+}
 
 .footer__text {
     font-family: 'Montserrat';
@@ -120,5 +126,44 @@ body {
     .header__text {
         font-size: 14px;
         line-height: 21px;
+    }
+}
+
+@media screen and (min-width: 997px) {
+    .content__member:nth-child(2) {
+        align-self: end;
+    }
+    
+    .content__member:nth-child(5) {
+        align-self: end;
+    }
+}
+
+@media screen and (max-width: 997px) {
+    .content__member:nth-child(2) {
+        align-self: end;
+    }
+    
+    .content__member:nth-child(4) {
+        align-self: end;
+    }
+
+    .content__member:nth-child(6) {
+        align-self: end;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .content__member-name {
+        font-size: 14px;
+    }
+
+    .content__member-rol {
+        font-size: 10px;
+    }
+
+    .content__member-photo {
+        width: 140px;
+        height: 210px;
     }
 }
