--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,6 @@
-body {
-}
-
 .header {
     display: flex;
-    margin: 50px 0;
+    margin: 40px 0 20px 0;
     min-height: 200px;
 }
 
@@ -13,7 +10,7 @@ body {
     justify-content: center;
     margin: auto auto;    
     height: 50%;
-    padding: 0 10% 0 5%;
+    padding: 4% 10% 4% 5%;
     max-width: 1200px;
 }
 
@@ -55,19 +52,25 @@ body {
 
 
 .content {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-template-rows: repeat(2, minmax(min-content, 500px));
-    grid-auto-rows: 500px;
-    margin: 0 auto;
-    padding: 0 10% 0 5%;
-    gap: 5% 5%;
-    max-width: 1200px;
-    
+    display: flex; 
+    flex-wrap: wrap;
+    max-width: 1200px; 
+    justify-content: center;
+    gap: 5%;  
+    padding: 5%;
+    margin: auto;
 }
 
 .content__member {
     display: flex;
+    height: 500px;
+    width: 300px;
+}
+
+.content__member-inner-div {
+    display: flex;
+    height: 80%;
+    width: 100%;
 }
 
 .content__member-name {
@@ -90,8 +93,9 @@ body {
 }
 
 .content__member-photo {
-    width: 240px;
-    height: 350px;
+    width: 100%;
+    height: 90%;
+    object-fit: cover;
 }
 
 .footer {
@@ -122,38 +126,24 @@ body {
     color: #A9A9A9;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (min-width: 1111px) {
+    .content__member:nth-child(3n - 1) {
+        flex-flow: column-reverse;
+    }
+}
+
+@media screen and (max-width: 1111px) {
+    .content__member:nth-child(2n) {
+        flex-flow: column-reverse;
+    }
+}
+
+@media screen and (max-width: 726px) {
     .header__text {
         font-size: 14px;
         line-height: 21px;
     }
-}
 
-@media screen and (min-width: 997px) {
-    .content__member:nth-child(2) {
-        align-self: end;
-    }
-    
-    .content__member:nth-child(5) {
-        align-self: end;
-    }
-}
-
-@media screen and (max-width: 997px) {
-    .content__member:nth-child(2) {
-        align-self: end;
-    }
-    
-    .content__member:nth-child(4) {
-        align-self: end;
-    }
-
-    .content__member:nth-child(6) {
-        align-self: end;
-    }
-}
-
-@media screen and (max-width: 750px) {
     .content__member-name {
         font-size: 14px;
     }
@@ -162,8 +152,28 @@ body {
         font-size: 10px;
     }
 
-    .content__member-photo {
-        width: 140px;
-        height: 210px;
+    .content {
+        justify-content: flex-start;
+    }
+}
+
+@media screen and (max-width: 726px) and (min-width: 581px) {
+    .content__member {
+        height: 400px;
+        width: 250px;
+    }
+}
+
+@media screen and (max-width: 580px) and (min-width: 471px) { 
+    .content__member {
+        height: 335px;
+        width: 200px;
+    }
+}
+
+@media screen and (max-width: 470px) { 
+    .content__member {
+        height: 270px;
+        width: 160px;
     }
 }
